--- a/MyAdvancedCSS/index.html
+++ b/MyAdvancedCSS/index.html
@@ -8,8 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <p>こんにちは！こんにちは！こんにちは！</p>
-  <p>こんにちは！こんにちは！こんにちは！</p>
-  <p>こんにちは！こんにちは！こんにちは！</p>
+  <section>
+    <h1>ドットインストール</h1>
+    <p>こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。
+    こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。
+    こんにちは。んにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。こんにちは。</p>
+  </section>
 </body>
 </html>
